--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #444;
-$seconday-color: #d35400;
+$secondary-color: #d35400;
 $show-home-image: true;
 $home-image: url(../img/bg.jpeg);
 $background-opacity: 0.8;
