--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -53,6 +53,12 @@
 			height: 150px;
 		}
 	}
+
+	.about-info {
+		grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
+
+		grid-template-columns: 1fr;
+	}
 }
 // smartpones
 @include mediaSm {
