--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
 	@include background;
 	background: $primary-color;
-	color: #fff;
+	color: set-text-color($primary-color);
 	height: 100%;
 	margin: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -34,7 +34,7 @@ h3 {
 }
 
 a {
-	color: #fff;
+	color: set-text-color($primary-color);
 	text-decoration: none;
 }
 
@@ -50,7 +50,8 @@ header {
 
 main {
 	padding: 4rem;
-	height: 100%;
+	// height: 100%;
+	min-height: calc(100vh - 60px);
 
 	.icons {
 		margin-top: 1rem;
@@ -71,6 +72,49 @@ main {
 			margin-top: 20vh;
 		}
 	}
+}
+
+.about-info {
+	display: grid;
+	grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 30px;
+
+	.bio-image {
+		grid-area: bioimage;
+		margin: auto;
+		border-radius: 50%;
+		border: $secondary-color 3px solid;
+		width: 250px;
+		height: 250px;
+	}
+	.bio {
+		grid-area: bio;
+		font-size: 1.5rem;
+	}
+	.job-1 {
+		grid-area: job1;
+	}
+	.job-2 {
+		grid-area: job2;
+	}
+	.job-3 {
+		grid-area: job3;
+	}
+
+	.job {
+		background: lighten($primary-color, 8);
+		padding: 0.5rem;
+		border-bottom: $secondary-color 5px solid;
+	}
+}
+
+#main-footer {
+	background: darken($primary-color, 9);
+	text-align: center;
+	padding: 1.3rem;
+	color: set-text-color($primary-color);
+	height: 60px;
 }
 
 @import 'mobile';
