--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,8 +1,14 @@
 // Wide screens
 @include mediaXl {
+	.projects {
+		grid-template-columns: repeat(4, 1fr);
+	}
 }
 // Desktop
 @include mediaLg {
+	.projects {
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 // Tablets
 @include mediaMd {
@@ -56,13 +62,18 @@
 
 	.about-info {
 		grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
-
 		grid-template-columns: 1fr;
+	}
+	.projects {
+		grid-template-columns: repeat(2, 1fr);
 	}
 }
 // smartpones
 @include mediaSm {
 	main#home h1 {
 		margin-top: 10vh;
+	}
+	.projects {
+		grid-template-columns: 1fr;
 	}
 }
