--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -67,6 +67,11 @@
 	.projects {
 		grid-template-columns: repeat(2, 1fr);
 	}
+	.boxes {
+		div {
+			font-size: 1rem;
+		}
+	}
 }
 // smartpones
 @include mediaSm {
